--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "body-parser": "^1.19.0",
     "pug": "^2.0.4",
     "shortid": "^2.2.15",
-    "cookie-parser": "^1.4.5",
-    "md5": "^2.2.1"
+    "cookie-parser": "^1.4.5"
   },
   "engines": {
     "node": "12.x"
