--- a/1-hello-world/package.json
+++ b/1-hello-world/package.json
@@ -4,12 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js",
+    "start": "nodemon --inspect index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@sendgrid/mail": "^7.1.1",
     "bcrypt": "^4.0.1",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
@@ -17,6 +18,7 @@
     "express": "^4.17.1",
     "lowdb": "^1.0.0",
     "md5": "^2.2.1",
+    "multer": "^1.4.2",
     "pug": "^2.0.4",
     "shortid": "^2.2.15"
   },
